# obsidianMCP

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  update-locks.sh
.github/workflows/: test.yml
docker/: obsidian-mcp-wrapper.sh
src/obsidian_mcp/: __init__.py  config.py  parser.py  search.py  server.py  startup_coordination.py  vector_search.py  watcher.py
tests/: __init__.py  test_config.py  test_hybrid_search.py  test_parser.py  test_search.py  test_server.py  test_vector_search.py  test_watcher.py
